--- a/packages/frontend/src/features/Header/components/SearchBar/index.module.css
+++ b/packages/frontend/src/features/Header/components/SearchBar/index.module.css
@@ -18,7 +18,7 @@
 
     width: calc(100% - 32px);
     max-width: calc(1280px - 32px);
-    padding: 12px 16px 16px;
+    padding: 12px 0px 16px;
     margin: 4px auto 20px;
 
     @media (min-width: $mantine-breakpoint-lg) {
