--- a/packages/frontend/src/features/ProductHero/index.module.css
+++ b/packages/frontend/src/features/ProductHero/index.module.css
@@ -1,5 +1,8 @@
 .product-hero {
-    width: 100%;
+    display: flex;
+    justify-content: center;
+
+    width: calc(var(--vw) * 100);
     padding: 32px 0px;
 }
 
@@ -11,7 +14,7 @@
     align-items: start;
     gap: 16px;
 
-    width: 100%;
+    width: min(calc(var(--vw) * 100), 1280px);
     max-width: 100%;
     padding: 0px;
     margin: auto;
@@ -108,4 +111,7 @@
 .add-to-cart-button {
     font-family: var(--font-primary);
     font-size: 1rem;
+    text-align: center;
+
+    padding: 0px;
 }
