--- a/packages/frontend/src/features/ProductInformation/index.module.css
+++ b/packages/frontend/src/features/ProductInformation/index.module.css
@@ -1,17 +1,18 @@
 .product-information {
+    display: flex;
+    justify-content: center;
+
     background-color: var(--site-colour-secondary, rgb(255, 236, 218));
 
-    width: 100%;
+    width: calc(var(--vw) * 100);
     padding: 32px 0px;
 }
 
 .product-information-width-controller {
     box-sizing: border-box;
 
-    width: 100%;
-    max-width: 1280px;
+    width: min(calc(var(--vw) * 100), 1280px);
     padding: 16px;
-    margin: auto;
 }
 
 .accordion-control {
