--- a/packages/frontend/src/features/RecommendedProducts/index.module.css
+++ b/packages/frontend/src/features/RecommendedProducts/index.module.css
@@ -1,5 +1,8 @@
 .recommended-products {
-    width: 100%;
+    display: flex;
+    justify-content: center;
+
+    width: calc(var(--vw) * 100);
     padding: 32px 0px;
 }
 
@@ -8,8 +11,7 @@
     flex-direction: column;
     gap: 16px;
 
-    width: 100%;
-    max-width: 100%;
+    width: min(calc(var(--vw) * 100), 1280px);
     padding: 16px;
     margin: auto;
 
